--- a/resume/index.html
+++ b/resume/index.html
@@ -8,18 +8,12 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-    <aside class="nameplate">
-        <div class="circle">
-        <a href="http://www.samanthamvb.com">
-            <h1>&#x1f466;</h1>
-        </a>
-        </div>
-        <div class="name">
+    <aside  class="name">
             <h2><a href="http://www.samanthamvb.com">Samantha Valtierra Bush</a></h2>
             <p>Multi-Platform Publisher</p>
         </div>
         <ul class="contact">
-            <li><a href="http://www.twitter.com/samanthamvb" target="_blank">@tylrfishr</a></li>
+            <li><a href="http://www.twitter.com/samanthamvb" target="_blank">@samanthamvb</a></li>
             <li><a href="mailto:samantha.vbush@gmail.com">samantha.vbush@gmail.com</a></p></li>
         </ul>
 
@@ -96,8 +90,8 @@ I am a 2013 Gannett Talent Development Program alumna.</p>
                     <div class="info">
                         <ul class="skills-list">
                             <li><strong> Development</strong>: My SQL, Access, Processing, HTML</li>
-                            <li><strong>Social Media</strong>:Facebook, Youtube, Twitter, Instagram</li>
-                            <li><strong>Database</strong>: R, Excel/spreadsheets, MySQL, Access</li>
+                            <li><strong>Social Media</strong>:Facebook, Youtube, Twitter, Instagram, Pinterest, Snapchat, Reddit</li>
+                            <li><strong>Database</strong>:  Excel/spreadsheets, MySQL, Access</li>
                             <li><strong>Multimedia</strong>: Adobe Creative Suite, Final Cut Pro, Soundtrack Pro, Audacity, Photography</li>
                         </ul>
                     </div>
