--- a/resume/index.html
+++ b/resume/index.html
@@ -8,7 +8,9 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-    <aside  class="name">
+    <aside class="nameplate">
+        
+        <div class="name">
             <h2><a href="http://www.samanthamvb.com">Samantha Valtierra Bush</a></h2>
             <p>Multi-Platform Publisher</p>
         </div>
