--- a/resume/index.html
+++ b/resume/index.html
@@ -20,7 +20,7 @@
         </div>
         <ul class="contact">
             <li><a href="http://www.twitter.com/samanthamvb" target="_blank">@samanthamvb</a></li>
-            <li><a href="mailto:samantha.vbush@gmail.com">samantha.vbush@gmail.com</a></p></li>
+            <li><a href="mailto:samantha.vbush@gmail.com">samantha.vbush@gmail.com</a></li>
         </ul>
 
         <div class="reference">
