--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <article>
       <div class="preview">
-        <h1><a href="/articles/bio/">"Samantha went to the Harvard of Tempe and majored in 'Finding Stuff Out'"</a></h1>
+        <h1>"Samantha went to the Harvard of Tempe and majored in 'Finding Stuff Out'"</a></h1>
         <p class="date"><span>1.09.2014</span></p>
         <section class="content"><h6></h6>
 <p>
@@ -36,10 +36,15 @@ I'm Samantha Valtierra Bush.</p>
 
 <p>I'm a well rounded multimedia journalist with a passion for creating new digital products and experiences. 
 I most enjoy  Computer Assisted Reporting,  and mobile tech.</p>
+<p> I've been a breaking news reporter, data specialist, app development manager, mobile content producer, social media expert and podcaster. 
+In each role I've used technology and digital media to enhance mine and others' work and to .</p>
+<p> I earned a B.A. in Digital journalism from Arizona State University's Walter Cronkite School of Journalism and Mass Communication. 
+A co-worker of mine once joked that I "went to the Harvard of Tempe and majored in finding stuff out," but there's more than a kernel of truth to what he said.
+ ASU might not have the most sterling reputation but I am an expert in learning whatever is put in front of me. </p>
         </section>
       </div>
 
-      <div class="nav"><a href="/page/2/">Next page »</a>
+      
       </div>
     </article>
     <div class="border"></div>
