--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ I'm Samantha Valtierra Bush.</p>
 <p>I'm a well rounded multimedia journalist with a passion for creating new digital products and experiences.  I most enjoy  Computer Assisted Reporting, social media marketing and mobile technology.</p>
 <p> I've been a breaking news reporter, data specialist, app development manager, mobile content producer, social media expert and podcaster. In each role I've used technology and digital media to enhance mine and others' work and to try something new in the digital space.</p>
 <p> I earned a B.A. in Digital journalism from Arizona State University's Walter Cronkite School of Journalism and Mass Communication. A co-worker of mine once joked that I "went to the Harvard of Tempe and majored in finding stuff out," but there's more than a kernel of truth to what he said. ASU might not have the most sterling reputation but I am an expert in learning whatever is put in front of me. </p>
+<p> When I'm not obsessing about the future of digital journalism I unplug by sewing clothes for myself or taking on whatever crafty project a loved one suggests. I have a desire to make things and sewing allows me to fill that need but unplug from the interent for a little while. </p> 
+<p> In my professional life, I aim to create unique digital experiences, challenge myself to learn and create more and to have fun. </p>      
         </section>
       </div>
 
