--- a/resume/index.html
+++ b/resume/index.html
@@ -20,7 +20,7 @@
         </ul>
 
         <div class="reference">
-            <p>References by request. </br>PDF r&#233;sum&#233; <a href="http://www.samanthamvb.com/resume.pdf">here</a></p>
+            <p>Connect with me on <a href="https://www.linkedin.com/pub/samantha-valtierra-bush/26/863/835">Linkedin</a> </br> References by request</p>
         </div>
     </aside>
     <article class="list">
@@ -30,20 +30,26 @@
                     <div class="info">
                         <div class="item">
                             <h4>Arizona State University</h4>
-                            <p><em>Bachelor of Arts in DigitalJournalism &ndash; Class of 2012 (3.66 GPA)</em></p>
+                            <p><em>Bachelor of Arts in Digital Journalism &ndash; Class of 2012 (3.66 GPA)</em></p>
                         </div>
                         <div class="item extra">
                             <h4>Herberger School of Design and the Arts</h4>
-                            <p><em> Digital Culture Minor &ndash; Class of 2012</em></p>
+                            <p><em> Minor in Digital Culture  &ndash; Class of 2012</em></p>
                         </div>
                     </div>
                 </section>
                 <section id="experience">
                 <h2>Experience</h2>
                     <div class="info">
+                     <div class="item">
+                            <h4>The Los Angeles News Group</h4>
+                            <p><em>Digital Producer&ndash; February 2014 to Present</em></p>
+                            <p>I help manage and post stories to LANG's nine local news websites, manage branded social media accounts for each property and work with colleagues and editors to develop digital and social media strategies. 
+                            I train newsroom staffers on social media and online best practices as well as teach them how to use new tools. I also work with developers to create newsroom tools and news products.</p>
+                        </div>
                         <div class="item">
                             <h4>The Arizona Republic</h4>
-                            <p><em>Mobile Producer&ndash; March 2013 to Present</em></p>
+                            <p><em>Mobile Producer&ndash; March 2013 to February 2014</em></p>
                             <p>I manually curate stories for the azcentral iPhone and iPad apps. This includes pulling from wires, line editing, writing mobile-friendly headlines and abstracts, formatting articles for mobile using HTML and CSS and coming up with inventive ways to tell a story for a mobile audience.
 I also post on behalf of the azcentral.com and 12 News social media accounts. 
 I am a 2013 Gannett Talent Development Program alumna.</p>
