--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
         
         <div class="name">
             <h2><a href="http://www.samanthamvb.com">Samantha Valtierra Bush</a></h2>
-            <p>Multi-Platform Publisher</p>
+            <p>Digital Media Producer</p>
         </div>
         <ul class="contact">
             <li><a href="http://www.twitter.com/samanthamvb" target="_blank">@samanthamvb</a></li>
@@ -20,25 +20,12 @@
         </ul>
 
         <div class="reference">
-            <p>Connect with me on <a href="https://www.linkedin.com/pub/samantha-valtierra-bush/26/863/835">Linkedin</a> </br> References by request</p>
+            <p>Connect with me on <a href="https://www.linkedin.com/pub/samantha-valtierra-bush/26/863/835">LinkedIn</a> </br> References by request</p>
         </div>
     </aside>
     <article class="list">
         <div class="txt">
-            <section id="education">
-                <h2>Education</h2>
-                    <div class="info">
-                        <div class="item">
-                            <h4>Arizona State University</h4>
-                            <p><em>Bachelor of Arts in Digital Journalism &ndash; Class of 2012 (3.66 GPA)</em></p>
-                        </div>
-                        <div class="item extra">
-                            <h4>Herberger School of Design and the Arts</h4>
-                            <p><em> Minor in Digital Culture  &ndash; Class of 2012</em></p>
-                        </div>
-                    </div>
-                </section>
-                <section id="experience">
+         <section id="experience">
                 <h2>Experience</h2>
                     <div class="info">
                      <div class="item">
@@ -93,6 +80,20 @@ I am a 2013 Gannett Talent Development Program alumna.</p>
 
                     </div>
                 </section>
+            <section id="education">
+                <h2>Education</h2>
+                    <div class="info">
+                        <div class="item">
+                            <h4>Arizona State University</h4>
+                            <p><em>Bachelor of Arts in Digital Journalism &ndash; Class of 2012 (3.66 GPA)</em></p>
+                        </div>
+                        <div class="item extra">
+                            <h4>Herberger School of Design and the Arts</h4>
+                            <p><em> Minor in Digital Culture  &ndash; Class of 2012</em></p>
+                        </div>
+                    </div>
+                </section>
+        
                 <section id="skills">
                     <h2>Skills</h2>
                     <div class="info">
