--- a/resume/index.html
+++ b/resume/index.html
@@ -28,9 +28,13 @@
          <section id="experience">
                 <h2>Experience</h2>
                     <div class="info">
+                    <div class="item">
+                            <h4>The Los Angeles News Group</h4>
+                            <p><em>Digital News Editor&ndash; August 2014 to Present</em></p>
+                            <p> I write news and features content specifically for social media distribution. I created a branded Snapchat strategy for LANG and produce weekly Snapchat Stories for our audience of over 2,000. I manage branded social media profiles and online content for all nine LANG properties. I lead newsroom training on social media and mobile best practices as well as social media ethics and new technologies. I participate on an audience growth strategy team and work with editors and reporters to build the best digital presentation for their stories. </div>
                      <div class="item">
                             <h4>The Los Angeles News Group</h4>
-                            <p><em>Digital Producer&ndash; February 2014 to Present</em></p>
+                            <p><em>Digital Producer&ndash; February 2014 to August 2014</em></p>
                             <p>I help manage and post stories to LANG's nine local news websites, manage branded social media accounts for each property and work with colleagues and editors to develop digital and social media strategies. 
                             I train newsroom staffers on social media and online best practices as well as teach them how to use new tools. I also work with developers to create newsroom tools and news products.</p>
                         </div>
