--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
   <body>
     <header>
       <div class="nameplate">
-        <h1><a href="https://www.linkedin.com/pub/samantha-valtierra-bush/26/863/835">Samantha Valtierra Bush</a></h1>
-        <h4 class="description">Digital Media Producer</h4>
+        <h1>Samantha Valtierra Bush</a></h1>
+        <h4 class="description">Digital News Editor</h4>
       </div>
       <nav>
         <ul>
-          <li><a href="/resume/">Résumé</a></li>
+          <li><a href="/resume/">Resume</a></li>
+        <li><a href="http://www.dailynews.com/staff/510">Work Samples</a></li>
+          <li><a href="https://www.linkedin.com/pub/samantha-valtierra-bush/26/863/835">Linkedin</a></li>
           <li><a href="http://twitter.com/samanthamvb" target="_blank">Twitter</a></li>
         </ul>
       </nav>
