--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <nav>
         <ul>
           <li><a href="/resume/">Resume</a></li>
-          <li><a href="http://www.dailynews.com/staff/510">Work Samples</a></li>
-          <li><a href="https://www.linkedin.com/pub/samantha-valtierra-bush/26/863/835">Linkedin</a></li>
+          <li><a href="http://www.dailynews.com/staff/510" target="_blank">Work Samples</a></li>
+          <li><a href="https://www.linkedin.com/pub/samantha-valtierra-bush/26/863/835" target="_blank">Linkedin</a></li>
           <li><a href="http://twitter.com/samanthamvb" target="_blank">Twitter</a></li>
         </ul>
       </nav>
